--- a/app/src/main/res/menu/my_menu.xml
+++ b/app/src/main/res/menu/my_menu.xml
@@ -4,6 +4,6 @@
 
     <item
         android:id="@+id/item_settings"
-        android:title="Settings"
-        app:showAsAction="always"/>
+        android:title="@string/settings_button"
+        app:showAsAction="always" />
 </menu>
