--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,47 +1,42 @@
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory app:title="@string/grid_header">
+    <PreferenceCategory app:title="@string/appearance_header">
 
         <SwitchPreferenceCompat
-            app:key="sync"
-            app:title="@string/grid_title" />
+            app:key="grid_used"
+            app:title="@string/grid_title"
+            app:defaultValue="true"/>
 
         <SeekBarPreference
-            app:dependency="sync"
+            app:dependency="grid_used"
             app:key="grid_brightness"
             app:title="@string/brightness_of_grid_title"
             app:showSeekBarValue="true"
             app:defaultValue="50"
             />
-<!--
-        <EditTextPreference
-            app:key="signature"
-            app:title="@string/signature_title"
-            app:useSimpleSummaryProvider="true" />
 
-        <ListPreference
-            app:defaultValue="reply"
-            app:entries="@array/reply_entries"
-            app:entryValues="@array/reply_values"
-            app:key="reply"
-            app:title="@string/reply_title"
-            app:useSimpleSummaryProvider="true" />
--->
-    </PreferenceCategory>
-<!--
-    <PreferenceCategory app:title="@string/sync_header">
-
-        <SwitchPreferenceCompat
-            app:key="sync"
-            app:title="@string/sync_title" />
-
-        <SwitchPreferenceCompat
-            app:dependency="sync"
-            app:key="attachment"
-            app:summaryOff="@string/attachment_summary_off"
-            app:summaryOn="@string/attachment_summary_on"
-            app:title="@string/attachment_title" />
+        <SeekBarPreference
+            app:key="ray_brightness"
+            app:title="@string/brightness_of_ray_title"
+            app:showSeekBarValue="true"
+            app:defaultValue="50"
+            />
 
     </PreferenceCategory>
--->
+
+    <PreferenceCategory app:title="@string/user_tools_header">
+
+        <SwitchPreferenceCompat
+            app:key="close_input"
+            app:title="@string/close_input_title"
+            app:summary="@string/close_input_summary"/>
+
+        <SwitchPreferenceCompat
+            app:dependency="close_input"
+            app:key="auto_set"
+            app:title="@string/auto_set_title"
+            app:summary="@string/auto_set_summary"/>
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
